--- a/index1.html
+++ b/index1.html
@@ -7,14 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unit 4 HW</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
-<body>
-    <h1>Crystal Gem Collectors</h1>
+<body class="text-center">
+    <div class="row container1">
+        <div class="col-lg-12 container1"> 
+                <h1>Crystal Gem Collectors</h1>
+            <img src="https://cdn.dribbble.com/users/33267/screenshots/1551812/crystal.png" alt ""> 
 
-    <div class="instructions">
+        </div>
+</div>
+
+
+
+    <!-- <div class="instructions">
         <h2>Here's how you play the game</h2>
         </br>
         <ol>
@@ -50,10 +59,10 @@
                         <section>
                             <h3>Your Total Score is <span id="totalScore"></span> </span> </h3> </section> 
                             
-        </div>
+        </div> -->
                                  <script type="text/javascript"
                                     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                                    <script src="assets/javascript/gaame.js"></script>
+                                    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
