--- a/index.html
+++ b/index.html
@@ -7,53 +7,65 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unit 4 HW</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
-<body>
-    <h1>Crystal Gem Collectors</h1>
+<body class="back">
+    <div class="startSection row">
+        <h1 class="heading">Crystal Gem Collectors</h1>
+        <div class="col-lg-12">
+            <!-- <img class="image"src="https://vignette.wikia.nocookie.net/ashvegas/images/a/a3/Crystal-caves.jpg/revision/latest?cb=20130817003631" alt="backgroundimage">  -->
 
-    <div class="instructions">
-        <h2>Here's how you play the game</h2>
-        </br>
-        <ol>
-            <li>You will be given a random number at the start of the game.</li>
-            <li>There are four gemstones below.</li>
-            <ul>
-                <li id="sapphire">Sapphire</li>
-                <li id="pearl">Pearl</li>
-                <li id="ruby">Ruby</li>
-                <li id="diamond">Diamond</li>
-            </ul>
-            <li>By clicking on a gemstone, you will add a specific amount of points to your total score.</li>
-            <li>You win the game by matching your total score to the random number.</li>
-            <li>You lose the game if your total score goes above the random number.</li>
-            <li>The value of each gemstone is hidden from you until you click on it.</li>
-            <li>Each time when the game starts, the game will change the values of each gemstone.</li>
-        </ol>
+            <button class="startbtn">Start Game</button>
+        </div>
     </div>
 
-    <div>Number to get: <span id="randomNumber"></span> </span> <section>
-            <h3>Wins: <span id="wins"> </span></h3> <h3>Losses: <span id="losses"> </span> </h3> <br>
-                        </section>
+    <div class="beginGame">
 
-                        <div>
-                            <button id="blue"> <img src="assets/images/sapphire.jpg" class="gemSize" alt="">
-                            </button>
-                            <button id="white"> <img src="assets/images/pearl.jpg" class="gemSize" alt=""> </button>
-                            <button id="red"> <img src="assets/images/ruby.jpg" class="gemSize"  alt=""> </button>
-                            <button id="green"> <img src="assets/images/emerald.jpg" class="gemSize" alt="">
-                            </button>
-                        </div>
+        <div class="instructions">
+            <h1 class="heading">Crystal Gem Collectors Game</h1>
+            <h2 class="heading" id="textFont">Magic Number <br> <span id="randomNumber">test</span> </h2>
+            </br>
+            <p> Each gem has a hidden value that will only be revealed when clicked. With each click, you will add the
+                gem's value to your total score. You will win the game if your total score matches the magic number, and
+                you will lose if your total score exceeds it. Good luck.
+            </p>
 
-                        <section>
-                            <h3>Your Total Score is <span id="totalScore"></span> </span> </h3> </section> 
-                            
+            <section class="ol">
+
+                <span id="sapphire">Sapphire <button id="blue"> <img src="assets/images/sapphire.jpg" class="gemSize"
+                            alt="">
+                    </button></span>
+
+                <span id="pearl">Pearl <button id="white"> <img src="assets/images/pearl.jpg" class="gemSize" alt="">
+                    </button></span>
+                <span id="ruby">Ruby <button id="red"> <img src="assets/images/ruby.jpg" class="gemSize" alt="">
+                    </button></span>
+                <span id="emerald">Emerald <button id="green"> <img src="assets/images/emerald.jpg" class="gemSize"
+                            alt="">
+                    </button></span>
+
+                <section>
         </div>
-                                 <script type="text/javascript"
-                                    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                                    <script src="assets/javascript/gaame.js"></script>
+
+        <div class="row">
+            <section class="col-sm-6 cont">
+                <h3>Wins: <span id="wins"> </span></h3>
+                <h3>Losses: <span id="losses"> </span> </h3> <br>
+            </section>
+
+            <section class="col-sm-6 cont">
+                <h3>Your Total Score is <span id="totalScore"></span> </span> </h3>
+            </section>
+        </div>
+
+
+    </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/gaame.js"></script>
 </body>
 
 </html>
